--- a/mi/MIX3(jly).html
+++ b/mi/MIX3(jly).html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>小米笔记本</title>
+	<title>小米mix3</title>
 	<link rel="stylesheet" href="css/commonjly.css">
 	<link rel="stylesheet" href="css/iconfontjly.css">
 	<link rel="stylesheet" href="css/resetjly.css">
-	<link rel="stylesheet" href="css/bjbjly.css">
+	<link rel="stylesheet" href="css/mix3jly.css">
 </head>
 <body>
 	<section class="top">
@@ -162,69 +162,128 @@
 			</div>	
 		</div>	
 	</header>
-	<section class="bod">
-		<ul class="bod-list">
-			<li class="img-qbjs">
-				<img src="images/ad4.png" alt="">
+	<section class="mix3">
+		<span class="mix3-word">小米MIX3</span>
+		<ul class="mix3-nav">
+			<li class="mix3-nav-detail">概述</li><span class="sx">|</span>
+			<li class="mix3-nav-detail">参数</li><span class="sx">|</span>
+			<li class="mix3-nav-detail">图集</li><span class="sx">|</span>
+			<li class="mix3-nav-detail">F码通道</li><span class="sx">|</span>
+			<li class="mix3-nav-detail">用户评价</li><span class="sx">|</span>
+			<span class="ljgm">立即购买</span>
+		</ul>
+	</section>
+	<section class="img-video">
+		<div class="carousel">
+			<ul class="carousel-imgs">
+				<li class="carousel-imgs-item" style="z-index: 99;"><img src="images/index_header_1.jpg" alt=""></li>
+				<li class="carousel-imgs-item"><img src="images/index_header_2.jpg" alt=""></li>
+				<li class="carousel-imgs-item"><img src="images/index_header_3.jpg" alt=""></li>
+			</ul>
+			<span class="arrow left-arrow" style="z-index: 99;"><img src="images/index_header_left.png" alt=""></span>
+			<span class="arrow right-arrow" style="z-index: 99;"><img src="images/index_header_right.png" alt=""></span>
+			<ul class="carousel-btn">
+				<li class="active"></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		<ul class="img-video-list">
+			<li class="img-4">
+				<p class="img-4-word1">开创性的磁动力滑盖全面屏<br>全面屏开创者，再次推动探索</p>
+				<p class="img-4-word2">小米MIX 3，93.4%的超高屏占比， 前置双摄隐藏<br>式设计，手机正面只有屏幕。开创性的磁动力助推<br>设计，经 30 万次严苛推屏考验，依然完好如初。</p>
+				<img src="images/index_section01_phone1.png" alt="" class="immg-4-img1">
+				<img src="images/index_section01_phone2.png" alt="" class="img-4-img2">
 			</li>
-			<li class="img-baokuan">
-				<p class="bk">人气甄选 热销爆款</p>
-				<div class="bk-shis">
-					<p class="bk-shis-text1">13.3"笔记本 四核i7<br>
-						8G 256G MX150
-					</p>
-					<p class="bk-shis-text2">
-						第8代四核i7处理器 MX150 2G独显 指纹解锁
-					</p>
-					<span class="bk-shis-text3">5799元</span>
-					<span class="bk-shis-text4">了解产品<i class="iconfont icon-arrow-right"></i></span>
-					<img src="images/bk.png" alt="">
+			<li class="img-5">
+				<p class="img-5-word1">新一代全面屏交互方式<br>复杂操作，一推即达</p>
+				<p class="img-5-word2">滑开秒回微信，滑开随时阅读,<br> 滑开一秒支付，滑开更支持个人定义,<br> 为滑盖赋予更多可能,<br>让你的随手一滑，直达最爱的 App。</p>
+				<video src="videos/index_section02_video3.mp4" autoplay=""></video>
+			</li>
+			<li class="img-6">
+				<p class="img-6-wprd1">开启陶瓷手机的色彩时代<br>手机中的艺术品</p>
+				<p class="img-6-wprd2">精致的四曲面陶瓷机身，经典的黑色陶瓷，优雅大气，<br>天然翡翠色，如玉般典雅高贵,<br>与四曲面陶瓷浑然天成，掌心间尽是璀璨光彩。</p>
+				<img src="images/index_header_3.jpg" alt="">
+			</li>
+			<li class="mix3-sp">
+				<video src="videos/mix3.mp4" autoplay="" width="100%" controls="controls">小米MIX3故宫特别版<br>传承中华国宝艺术之美</video>
+			</li>
+			<li class="img-7">
+				<img src="images/index_header_2.jpg" alt="">
+			</li>
+			<li class="img-8">
+				<p class="img-8-word1">小米MIX 3 故宫特别版礼盒</p>
+				<p class="img-8-word2">内置纯手工獬豸贴金铜像，故宫特别版流量卡，10W无线充电器，专属主题及<br>手机保护壳，为你献上一份来自故宫的珍贵礼物</p>
+				<img src="images/index_header_1.jpg" alt="">
+			</li>
+			<li class="img-9">
+				<p class="img-9-word1">震撼全面屏下的，非凡拍照体验<br>DxOMark拍照108分，世界领先</p>
+				<p class="img-9-word2">绚丽的夜景好美，可手机总是拍不出？1.4um 大像素 + 2PD 双核对焦技术,<br> 配合全新手持超级夜景，八项黑科技，让你稳稳留住绝美夜色。</p>
+				<img src="images/ad108.png" alt="" class="img-9-108">
+				<img src="images/ad93.png" alt="" class="img-9-93">
+				<img src="images/bigp.png" alt="" class="img-9-bigp">
+			</li>
+			<li class="img-10">
+				<img src="images/mvtp.jpg" alt="">
+			</li>
+			<li class="img-11">
+   				<p class="img-11-word1">小米迄今最强前置双摄<br>AI 体验大满贯</p>
+   				<p class="img-11-word2">精准分析画面内物体及远近层次，实时呈现<br>单反般的光学虚化效果， 轻松拍出宛如梦境的唯美影片。</p>
+   				<span class="img-11-word3">24MP 主摄</span>
+   				<span class="img-11-word4">索尼旗舰感光元件</span>
+   				<span class="img-11-word5">2MP 副摄</span>
+   				<span class="img-11-word6">独立景深相机</span>
+				<video src="videos/index_section08_video.mp4" autoplay loop></video>
+			</li>
+			<li class="img-12">
+				<div class="img-12-word">
+					<ul class="img-12-word-list">
+						<li class="img-12-words">AI 场景相机<br><span class="detail">人景分离，12 类场景美化</span></li>
+						<li class="img-12-words">AI 影棚光效<br><span class="detail">口袋里的影棚级打光</span></li>
+						<li class="img-12-words">AI 梦境虚化<br><span class="detail">梦幻的动态虚化效果</span></li>
+						<li class="img-12-words">AI 视频实时美颜<br><span class="detail">智能追踪人脸，动态美颜</span></li>
+						<li class="img-12-words">AI 裸妆美颜<br><span class="detail">轻补自然裸妆</span></li>
+						<li class="img-12-words">AI 天使眼神光<br><span class="detail">7 款眼神光，眼眸精灵动人</span></li>
+					</ul>
 				</div>
-			</li>
-			<li class="img-sh">
-				<div class="img-sh1">
-					<p class="img-sh1-txt1">13.3'四核i7 MX150</p>
-					<p class="img-sh1-txt2">带独立显卡的轻薄笔记本</p>
-					<span class="img-sh1-txt3">5999元</span>
-					<img src="images/ad5.png" alt="">
+				<div class="img-12-imgs">
+					<img src="images/mn4.jpg" alt="">
 				</div>
-				<div class="img-sh2">
-					<p class="img-sh2-txt1">13.3'八代i3 集显</p>
-					<p class="img-sh2-txt2">轻薄全金属机身, 8G内存</p>
-					<span class="img-sh2-txt3">3999元</span>
-					<img src="images/ad6.png" alt="">
-				</div>
+				<li class="img-13">
+					<p class="img-13-word1">10GB 超大内存<br>骁龙845 超旗舰商务手机</p>
+					<p class="img-13-word2">比肩 PC 的 10GB 超大内存，可肆意游刃于多个 App 之间。<br>骁龙845 年度旗舰处理器，亦是畅玩高帧率游戏的不二利器。</p>
+					<img src="images/xl.jpg" alt="">
+				</li>
+				<li class="img-14">
+					<p class="img-14-word1">高效 10W 无线充电，充电功率提升 30%随手机赠送无线充电器</p>
+					<p class="img-14-word2">充电更快，可适用各类 Qi 标准无线充电器，机场、咖啡馆内无线充电器均可放心使用。</p>
+					<img src="images/cdsj.jpg" alt="">
+				</li>
+				<li class="img-15">
+					<img src="images/gd.jpg" alt="">
+				</li>
+				<li class="img-16">
+					<div class="img-16-mix3">
+						<img src="images/mix3.jpg" alt="">
+					</div>
+					<ul class="img-16-words">
+						<li class="img-16-word">93.4% 超高屏占比<br><span>6.39”全面屏，正面只有屏幕</span></li>
+						<li class="img-16-word">磁动力滑盖全面屏<br><span>全新交互，复杂操作一推即达</span></li>
+						<li class="img-16-word">全新手持超级夜景<br><span>稳稳定格，绝美夜色</span></li>
+						<li class="img-16-word">960 帧慢动作摄影<br><span>AI 智能配乐，捕捉至美一瞬</span></li>
+						<li class="img-16-word">传承中华国宝艺术之美<br><span>小米MIX 3 故宫特别版</span></li>
+						<li class="img-16-word">前置24MP + 2MP <br><span>梦幻般视频实时背景虚化</span></li>
+						<li class="img-16-word">后置12MP+12MP <br><span>超旗舰 AI 超感光双摄</span></li>
+						<li class="img-16-word">骁龙845 + 10GB <br><span>超旗舰性能</span></li>
+						<li class="img-16-word">高效 10W 无线充电<br><span>随手机赠送无线充电器</span></li>
+						<li class="img-16-word">小爱同学独立 AI 键<br><span>支持 7 种地方语言</span></li>
+					</ul>
+					<li class="img-17">
+						<p class="img-17-word">欣赏小米MIX 3 精彩图集 <i class="iconfont icon-arrow-right"></i></p>
+						<img src="images/index_next.jpg" alt="">
+					</li>
+				</li>
 			</li>
-			<li class="img-bd">
-				<p class="img-bd-bk">潮流风向 新品推荐</p>
-				<div class="img-bd-list">
-					<p class="img-bd-text1">13.3"笔记本 四核i7<br>
-						8G 256G MX150
-					</p>
-					<p class="img-bd-text2">
-						第8代四核i7处理器 MX150 2G独显 指纹解锁
-					</p>
-					<span class="img-bd-text3">5799元</span>
-					<span class="img-bd-text4">了解产品<i class="iconfont icon-arrow-right"></i></span>
-					<img src="images/ad8.png" alt="">
-				</div>				
-			</li>
-			<li class="img-if">
-				<div class="img-if-list">
-					<p class="img-if-txt1">13.3'四核i7 MX150</p>
-					<p class="img-if-txt2">带独立显卡的轻薄笔记本</p>
-					<span class="img-if-txt3">5999元</span>
-					<img src="images/ad9.png" alt="">
-				</div>
-				<div class="img-mx">
-					<p class="img-mx-txt1">13.3'八代i3 集显</p>
-					<p class="img-mx-txt2">轻薄全金属机身, 8G内存</p>
-					<span class="img-mx-txt3">3999元</span>
-					<img src="images/ad7.png" alt="">
-				</div>	
-			</li>
-			<li class="img-is-mx"></li>
-			<li class="img-is-ti"></li>
 		</ul>
 	</section>
 	<footer class="footer">
@@ -328,14 +387,53 @@
 			</div>	
 		</section>
 </body>
-<script src="js/bjbjly.js">
-	/*function appear(){
-		var xs = document.getElementById('fl');
-		xs.style.display="block";
-	}
-	function disAppear(){
-		var cx = document.getElementById('fl');
-		cx.style.display="none";
-	}*/
+<script>
+	 var aImg = document.querySelectorAll('.carousel-imgs-item');
+	 var oLeftArrow = document.querySelector('.left-arrow');
+	 var oRightArrow = document.querySelector('.right-arrow');
+	 var aBtn = document.querySelector('.carousel-btn').children;
+	 console.log(aImg);
+	 console.log(oLeftArrow);
+	 console.log(oRightArrow);
+	 console.log(aBtn);
+	 var now = 0;
+	 function tab(){
+	 	for(var i = 0; i<aImg.length;i++){
+	 		aImg[i].style.zIndex = '0';
+	 		aBtn[i].className = '';
+	 		aImg[i].style.opacity = '0';
+	 	}
+	 	aImg[now].style.zIndex = '99';
+	 	aImg[now].style.opacity = '1';
+	 	aBtn[now].className = 'active';	 	
+	 }
+	 oRightArrow.onclick = function(){
+	 	now++;
+	 	if(now >= aImg.length){
+	 		now = 0;
+	 	}
+	 	tab();
+	 }
+	 oLeftArrow.onclick = function(){
+	 	now--;
+	 	if(now<0){
+	 		now = aImg.length-1;
+	 	}
+	 	tab();
+	 }
+	 for(var i = 0;i<aBtn.length;i++){
+	 	aBtn[i].index = i;
+	 	aBtn[i].onclick = function(){
+	 		now = this.index;
+	 		tab();
+	 	}
+	 }
+	 timer = setInterval(oRightArrow.onclick,2000);
+	 oCarousel.onmouseover = function(){
+	 	clearInterval(timer);
+	 }
+	 oCarousel.onmouseout = function(){
+	 	timer = setInterval(oRightArrow.onclick,2000);
+	 }
 </script>
 </html>
