--- a/mi/MIX3(jly).html
+++ b/mi/MIX3(jly).html
@@ -206,7 +206,7 @@
 				<img src="images/index_header_3.jpg" alt="">
 			</li>
 			<li class="mix3-sp">
-				<video src="videos/mix3.mp4" autoplay="" width="100%" controls="controls">小米MIX3故宫特别版<br>传承中华国宝艺术之美</video>
+				<video src="videos/mix3.WebM" autoplay="" width="100%" controls="controls" autoplay loop>小米MIX3故宫特别版<br>传承中华国宝艺术之美</video>
 			</li>
 			<li class="img-7">
 				<img src="images/index_header_2.jpg" alt="">
@@ -392,6 +392,7 @@
 	 var oLeftArrow = document.querySelector('.left-arrow');
 	 var oRightArrow = document.querySelector('.right-arrow');
 	 var aBtn = document.querySelector('.carousel-btn').children;
+	 var oCarousel = document.querySelector('.carousel');
 	 console.log(aImg);
 	 console.log(oLeftArrow);
 	 console.log(oRightArrow);
